<resources>
    <string name="app_name">Tadabbur App</string>
    <string name="action_settings">Settings</string>
    <string name="log">login</string>
    <string name="tadabbur">Tadabbur</string>
    <string name="search">search</string>
    <string name="read">Read</string>
    <string name="title_activity_log">log</string>
    <string name="title_activity_loging">loging</string>
    <string name="password">pasword</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="logstatus">enter info</string>
    <string name="title_activity_read">ReadActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begin">alfateha</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="searchbtn">search</string>
    <string name="title_activity_tadbr">TadbrActivity</string>
    <string name="ftadbr">find Tadbr</string>
    <string name="addtdbr">add tadbr</string>
    <string name="title_activity_add_tadbr">addTadbrActivity</string>
    <string name="stortdbr">submit</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="index">Index</string>
    <string name="marks">BookMarks</string>
    <string name="mark">Mark</string>
    <string name="title_activity_read_action">ReadActionActivity</string>
    <string name="title_activity_book_mark">BookMarkActivity</string>
    <string name="title_activity_read2">Quran</string>
    <string name="tdcon">whwhwhhwhwhhwhwhhwh</string>
    <string name="title_activity_tadabbur_detail">TadabburDetail</string>
    <string name="like">Like</string>
    <string name="dtdp">delete</string>


</resources>
