<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_tadabbur_detail" tools:context=".TadabburDetail">

    <TextView
        android:id="@+id/tdcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tdcon"
        android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/likesno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp" />
    <Button
        android:id="@+id/likebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:onClick="LikeOnClick"
        android:layout_marginLeft="30dp"
        android:layout_alignTop="@+id/deletebtn"
        android:layout_toEndOf="@+id/deletebtn" />
    <Button
        android:id="@+id/deletebtn"
        android:layout_width="wrap_content"
        android:onClick="DeleteOnClick"
        android:layout_height="wrap_content"
        android:text="@string/dtdp"
        android:layout_marginTop="140dp"
        />
    <TextView
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp" />
    <TextView
        android:id="@+id/tdbrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp" />
    <TextView
        android:id="@+id/pagetdbr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp" />


</RelativeLayout>